--- a/desafio/modulo 02/desafio 12/style.css
+++ b/desafio/modulo 02/desafio 12/style.css
@@ -6,9 +6,9 @@
 
 
 :root{
-    --fonte-padrao: Arial, Helvetica, sans-serif;
-    --fonte-titulo: 'Passion One', sans-serif;
-    --fonte-texto: 'Sriracha', cursive;
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
 }
 
 *{
@@ -16,40 +16,67 @@
     padding: 0px;
 }
 
-header{
+html, body {
+    min-height: 100vh;
+    background-color: darkgrey;
+    font-family: var(--fonte1);
+}
+
+header {
     background-color: black;
-    text-align: center;
-    min-height: 150px;
-    padding-top: 60px;
-}
-
-header h1 {
-    font-family: var(--fonte-titulo);
     color: white;
-    font-weight: bold;
-    font-size: 3.5em;
+    text-align: center
 }
 
-header h1 strong{
-    font-size: .7em;
+header > h1 {
+    padding-top: 50px;
+    font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
-header p {
-    font-family: var(--fonte-padrao);
+header > p {
+    padding-bottom: 50px;
+}
+
+header a, footer a {
     color: white;
-    font-size: 1.2em;
+    text-decoration: none;
+    font-weight: bolder;
 }
 
-article {
-    margin-top: 50px;
-    padding: 20px;
-    text-align: left;
-    width: 200px;
+header a:hover, footer a:hover{
+    text-decoration: underline;
+}
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
     line-height: 2em;
+    padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
-p {
-    font-family: var(--fonte-texto);
-    font-weight: bold;
-    font-size: 1.2em;
+section.normal{
+    background-color: white;
+    color: black;
+}
+
+section.imagem{
+    background-color: rgb(51, 51, 51);
+    color: white;
+}
+
+section.imagem > p { 
+    display: inline block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.253);
+}
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
 }
