--- a/exercicios/modulo-04/ex026/mq002/estilos/paisagem.css
+++ b/exercicios/modulo-04/ex026/mq002/estilos/paisagem.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
 /* Aparenlho deitado (landscape) */
+
+body {
+    background-image: url(../imagens/cev-landscape.jpg);
+    background-position: left bottom;
+}
