--- a/exercicios/modulo-04/ex026/mq002/estilos/retrato.css
+++ b/exercicios/modulo-04/ex026/mq002/estilos/retrato.css
@@ -2,3 +2,7 @@
 
 /* Aparenlho em pé (portrait) */
 
+body {
+    background-image: url(../imagens/cev-portrait.jpg);
+    background-position: center bottom;
+}
