--- a/exercicios/modulo-04/ex026/mq005/estilos/media-query.css
+++ b/exercicios/modulo-04/ex026/mq005/estilos/media-query.css
@@ -10,5 +10,19 @@ Grandes telas: Acima de 1200px
 */
 
 @media screen and (min-width: 768){
+    i#burguer {
+        display: none;
+    }
 
+    menu {
+        display: block;
+    }
+
+    menu > ul > li {
+        display: inline-block;
+    }
+
+    main {
+        width: 768px;
+    }
 }
