--- a/exercicios/modulo-04/ex026/mq005/estilos/media-query.css
+++ b/exercicios/modulo-04/ex026/mq005/estilos/media-query.css
@@ -9,7 +9,7 @@ Desktop: de 992px até 1200px
 Grandes telas: Acima de 1200px
 */
 
-@media screen and (min-width: 768){
+@media screen and (min-width: 768px){
     i#burguer {
         display: none;
     }
