--- a/exercicios/modulo-05/ex027/flex014-conteudoflex/style.css
+++ b/exercicios/modulo-05/ex027/flex014-conteudoflex/style.css
@@ -10,13 +10,17 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
     line-height: 1.5em;
-    width: 100vw;
-    height: 100vh;
 }
 
-p, h1, h2{
+p {
     margin-bottom: 10px;
     text-align: justify;
+}
+
+h1, h2{
+    margin-bottom: 20px;
+    line-height: 1.2em;
+    text-align: left;
 }
 
 header, section.normal{
@@ -48,13 +52,14 @@ article > div.text{
 }
 
 article > div.media{
-    flex: 1 0 500px;
+    flex: 1 0 400px;
 }
 
 div.media > img{
     display: block;
     margin: auto;
     width: 300px;
+    padding: 10px;
 }
 
 div.media > iframe{
